<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ksanchez.enapp.fragments.eval1_p4"
    android:orientation="vertical"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="#CEF6F5"
        android:layout_height="wrap_content">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde_pregunta_enedu"
            android:padding="@dimen/layout_margin10dp"
            android:layout_margin="@dimen/layout_margin10dp"
            android:weightSum="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eval05_p09"
                android:textSize="@dimen/texto_medio"
                android:textStyle="bold"
                android:textColor="#0404B4"
                android:layout_marginBottom="@dimen/layout_margin10dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin20dp">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/texto_chico"
                        android:textStyle="bold"
                        android:textColor="#0404B4"
                        android:layout_marginRight="@dimen/layout_margin10dp"
                        android:text="@string/eval05_p09_caracteristicas"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/texto_chico"
                        android:textStyle="bold"
                        android:textColor="#0404B4"
                        android:layout_marginRight="@dimen/layout_margin10dp"
                        android:text="COLUMNA (A)"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:gravity="right"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/texto_chico"
                        android:textStyle="bold"
                        android:textColor="#0404B4"
                        android:layout_marginRight="85dp"
                        android:text="@string/eval05_p09_concepto"/>


                    <TextView
                        android:gravity="right"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/texto_chico"
                        android:textStyle="bold"
                        android:textColor="#0404B4"
                        android:layout_marginRight="85dp"
                        android:text="COLUMNA (B)"/>
                </LinearLayout>


            </LinearLayout>

            <!--01-->

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin20dp">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_weight="4"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/texto_medio"
                        android:layout_marginRight="@dimen/layout_margin10dp"
                        android:text="@string/eval05_p09_sub01"/>
                </LinearLayout>


                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#050505"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_margin="5dp"/>


                <android.support.v7.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="@dimen/layout_margin10dp"
                    android:background="@drawable/borde_pregunta_enedu">
                    <Spinner
                        android:id="@+id/eval1_p09_sp1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawSelectorOnTop="true"
                        android:hint="Seleccione"
                        android:entries="@array/ABCD_opciones"/>

                </android.support.v7.widget.CardView>
                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/texto_medio"
                    android:text="@string/eval05_p09_op01"/>
            </LinearLayout>

            <!--02-->

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin20dp">


                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_weight="4"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/layout_margin10dp"
                        android:textSize="@dimen/texto_medio"
                        android:text="@string/eval05_p09_sub02"/>
                </LinearLayout>



                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#050505"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_margin="5dp"/>


                <android.support.v7.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="@dimen/layout_margin10dp"
                    android:background="@drawable/borde_pregunta_enedu">
                    <Spinner
                        android:id="@+id/eval1_p09_sp2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawSelectorOnTop="true"
                        android:entries="@array/ABCD_opciones"/>
                </android.support.v7.widget.CardView>
                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:textSize="@dimen/texto_medio"
                    android:layout_height="wrap_content"
                    android:text="@string/eval05_p09_op02"/>
            </LinearLayout>

            <!--03-->

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin20dp">


                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_weight="4"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/texto_medio"
                        android:layout_marginRight="@dimen/layout_margin10dp"
                        android:text="@string/eval05_p09_sub03"/>
                </LinearLayout>



                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#050505"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_margin="5dp"/>


                <android.support.v7.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="@dimen/layout_margin10dp"
                    android:background="@drawable/borde_pregunta_enedu">
                    <Spinner
                        android:id="@+id/eval1_p09_sp3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawSelectorOnTop="true"
                        android:entries="@array/ABCD_opciones"/>
                </android.support.v7.widget.CardView>
                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/texto_medio"
                    android:text="@string/eval05_p09_op03"/>
            </LinearLayout>

            <!--04-->

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin20dp">



                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_weight="4"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/texto_medio"
                        android:layout_marginRight="@dimen/layout_margin10dp"
                        android:text="@string/eval05_p09_sub04"/>
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#050505"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_margin="5dp"/>


                <android.support.v7.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="@dimen/layout_margin10dp"
                    android:background="@drawable/borde_pregunta_enedu">
                    <Spinner
                        android:id="@+id/eval1_p09_sp4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawSelectorOnTop="true"
                        android:entries="@array/ABCD_opciones"/>
                </android.support.v7.widget.CardView>
                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/texto_medio"
                    android:text="@string/eval05_p09_op04"/>
            </LinearLayout>



        </LinearLayout>
    </LinearLayout>

</LinearLayout>